데이터분석 실습내용 추가

--- a/crawling_project/14장_(4)CNN품종분류.ipynb
+++ b/crawling_project/14장_(4)CNN품종분류.ipynb
@@ -338,39 +338,47 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 1: val_loss improved from None to 0.94908, saving model to ../14장_data/dog/model/01-0.9491.keras\n",
+      "Epoch 1: val_loss improved from None to 0.85594, saving model to ../14장_data/dog/model/01-0.8559.keras\n",
       "\n",
-      "Epoch 2: val_loss did not improve from 0.94908\n",
+      "Epoch 2: val_loss did not improve from 0.85594\n",
       "\n",
-      "Epoch 3: val_loss improved from 0.94908 to 0.88533, saving model to ../14장_data/dog/model/03-0.8853.keras\n",
+      "Epoch 3: val_loss did not improve from 0.85594\n",
       "\n",
-      "Epoch 4: val_loss improved from 0.88533 to 0.80090, saving model to ../14장_data/dog/model/04-0.8009.keras\n",
+      "Epoch 4: val_loss improved from 0.85594 to 0.79287, saving model to ../14장_data/dog/model/04-0.7929.keras\n",
       "\n",
-      "Epoch 5: val_loss improved from 0.80090 to 0.69791, saving model to ../14장_data/dog/model/05-0.6979.keras\n",
+      "Epoch 5: val_loss did not improve from 0.79287\n",
       "\n",
-      "Epoch 6: val_loss improved from 0.69791 to 0.65181, saving model to ../14장_data/dog/model/06-0.6518.keras\n",
+      "Epoch 6: val_loss improved from 0.79287 to 0.76794, saving model to ../14장_data/dog/model/06-0.7679.keras\n",
       "\n",
-      "Epoch 7: val_loss improved from 0.65181 to 0.62089, saving model to ../14장_data/dog/model/07-0.6209.keras\n",
+      "Epoch 7: val_loss did not improve from 0.76794\n",
       "\n",
-      "Epoch 8: val_loss improved from 0.62089 to 0.58550, saving model to ../14장_data/dog/model/08-0.5855.keras\n",
+      "Epoch 8: val_loss did not improve from 0.76794\n",
       "\n",
-      "Epoch 9: val_loss improved from 0.58550 to 0.54012, saving model to ../14장_data/dog/model/09-0.5401.keras\n",
+      "Epoch 9: val_loss improved from 0.76794 to 0.71273, saving model to ../14장_data/dog/model/09-0.7127.keras\n",
       "\n",
-      "Epoch 10: val_loss did not improve from 0.54012\n",
+      "Epoch 10: val_loss improved from 0.71273 to 0.66265, saving model to ../14장_data/dog/model/10-0.6626.keras\n",
       "\n",
-      "Epoch 11: val_loss did not improve from 0.54012\n",
+      "Epoch 11: val_loss improved from 0.66265 to 0.64640, saving model to ../14장_data/dog/model/11-0.6464.keras\n",
       "\n",
-      "Epoch 12: val_loss did not improve from 0.54012\n",
+      "Epoch 12: val_loss improved from 0.64640 to 0.61529, saving model to ../14장_data/dog/model/12-0.6153.keras\n",
       "\n",
-      "Epoch 13: val_loss did not improve from 0.54012\n",
+      "Epoch 13: val_loss improved from 0.61529 to 0.55280, saving model to ../14장_data/dog/model/13-0.5528.keras\n",
       "\n",
-      "Epoch 14: val_loss did not improve from 0.54012\n"
+      "Epoch 14: val_loss did not improve from 0.55280\n",
+      "\n",
+      "Epoch 15: val_loss did not improve from 0.55280\n",
+      "\n",
+      "Epoch 16: val_loss did not improve from 0.55280\n",
+      "\n",
+      "Epoch 17: val_loss did not improve from 0.55280\n",
+      "\n",
+      "Epoch 18: val_loss did not improve from 0.55280\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x2259b6471d0>"
+       "<keras.src.callbacks.history.History at 0x22e993f7ec0>"
       ]
      },
      "execution_count": 15,
@@ -402,9 +410,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 37ms/step - accuracy: 0.8000 - loss: 0.7305\n",
-      "loss = 0.7305127382278442\n",
-      "accuracy = 0.800000011920929\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 38ms/step - accuracy: 0.6000 - loss: 0.6013\n",
+      "loss = 0.601323664188385\n",
+      "accuracy = 0.6000000238418579\n"
      ]
     }
    ],
@@ -513,7 +521,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 74ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 77ms/step\n"
      ]
     }
    ],
@@ -551,7 +559,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "입력:../14장_data/dog/new\\new1.jpg => 예측: 말티즈 / Score=99.26%\n",
+      "입력:../14장_data/dog/new\\new1.jpg => 예측: 말티즈 / Score=93.50%\n",
       "\n",
       "\n"
      ]
@@ -570,7 +578,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "입력:../14장_data/dog/new\\new2.jpg => 예측: 말티즈 / Score=99.75%\n",
+      "입력:../14장_data/dog/new\\new2.jpg => 예측: 말티즈 / Score=95.23%\n",
       "\n",
       "\n"
      ]
@@ -589,7 +597,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "입력:../14장_data/dog/new\\new3.jpg => 예측: 요크셔(54.70%) 와 말티즈(41.66%)의 믹스견으로 추정됩니다.\n",
+      "입력:../14장_data/dog/new\\new3.jpg => 예측: 요크셔(65.48%) 와 말티즈(31.16%)의 믹스견으로 추정됩니다.\n",
       "\n",
       "\n"
      ]
